--- a/_sass/imports/_sections.scss
+++ b/_sass/imports/_sections.scss
@@ -102,7 +102,7 @@
   .view-all  {
     box-sizing: border-box;
     color: _palette(accent);
-    display: inline-block;
+    display: none;
     font-size: 16px;
     font-weight: bold;
     line-height: 1.5;
