Fixing site title

--- a/_sass/imports/_palettes.scss
+++ b/_sass/imports/_palettes.scss
@@ -154,8 +154,7 @@
     border-color: _palette(accent-blue);
   }
 
-  .form-row .input-focus,
-  .site-title a {
+  .form-row .input-focus {
     background: _palette(accent-blue);
   }
 }
