Breaking all the fonts

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -7,6 +7,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="google" content="notranslate" />
         <link href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,600,800&display=swap" rel="stylesheet">
+        <link href='https://fonts.googleapis.com/css?family=Unica+One' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Merriweather:900,400' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="{{ 'assets/css/main.css' | relative_url }}">
         
     </head>
