--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -15,7 +15,7 @@ $palette: (
   border:        #e8e8e8,
   border-alt:    lighten(#272c30, 7%),
   accent:        #d8195e,
-  accent-blue:   #0c8aea,
+  accent-blue:   #205AD9,
   accent-green:  #0da5b1,
   accent-violet: #7c43a8,
   accent-yellow: #ed9700
