--- a/_sass/imports/_general.scss
+++ b/_sass/imports/_general.scss
@@ -34,10 +34,12 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: bold;
+  font-weight: 300;
   line-height: 1.2;
   margin: 2.5rem 0 0.83333rem;
   text-rendering: optimizeLegibility;
+  font-family: "Merriweather", serif;
+
 
   &:first-child {
     margin-top: 0;
