--- a/_sass/imports/_general.scss
+++ b/_sass/imports/_general.scss
@@ -34,7 +34,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-weight: 300;
+  font-weight: bold;
   line-height: 1.2;
   margin: 2.5rem 0 0.83333rem;
   text-rendering: optimizeLegibility;
