De-bolding testimonial citations

--- a/_sass/imports/_sections.scss
+++ b/_sass/imports/_sections.scss
@@ -175,7 +175,7 @@
 .testimonial-author {
   color: _palette(secondary);
   font-size: inherit;
-  font-weight: bold;
+  font-weight: 600;
   margin: 0;
 }
 
