Fixing CSS issues

--- a/_sass/imports/_general.scss
+++ b/_sass/imports/_general.scss
@@ -417,8 +417,18 @@ img {
   max-width:100%;
 }
 
-.inner-small p {
-  max-width:750px;
-  margin-left: auto;
-  margin-right: auto;
+.inner-small {
+  p,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  ul,
+  li {
+    max-width:750px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
